a1/brendan_gordon/TEST_PROGRAMS/invalidtype/theo_szymkowiak/prgm1.min
# Cannot add a string and a int
var x: int;
var y: string;
var r: int;

x = 2;
y = "test";

r = x + y;

